# project-beautiful

./: .gitmodules  docs.md  meson.build  meson_options.txt  rtheme.spec  test.bash  todo  todo & plans
data/: io.risi.rtheme.gschema.xml  io.risi.rthemed.desktop  meson.build
rAdwManagerGtk/: .placeholder
rAdwManagerLib/: __main__.py  constants.py
rthemed/: __init__.py  __main__.py  daemon.py  dbus.py  main.py  meson.build  rthemed.in  test.bash  test.py
rthemed/systemd/: 95-rthemed.preset  meson.build  rthemed.service
rthemelib/: __init__.py  __main__.py  constants.py  meson.build  plugin_manager.py  setup.py  test.py  theme_classes.py
rthemelib/plugins/: gtk3.py  gtk4.py  meson.build
rthemelib/plugins/gnome_shell/: __main__.py  constants.py
rthemelib/plugins/gnome_shell/data/: 43.scss
rthemelib/plugins/gnome_shell/data/gnome43/: rtheme.css
rthemelib/plugins/gnome_shell/data/gnome44/gnome-shell-sass/: _colors.scss
themes/: adwaita.rtheme  adwaita.yml  classic.rtheme  meson.build  nord.rtheme  nord.yml  risi.rtheme  risi.yml  solarized.rtheme  theme_template.rtheme  theme_template.yml
